creating 'PedidoDTO and saving 'Produto'

--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -24,8 +24,8 @@
 					<small>Procure em um site o produto que você deseja e cole a url da página aqui.</small>
 				</div>
 				<div>
-					<label for="nomeImagem">Imagem</label>
-					<input name="nomeImagem" placeholder="url da imagem"/>
+					<label for="urlImagem">Imagem</label>
+					<input name="urlImagem" placeholder="url da imagem"/>
 					<small>Copie a url de uma boa imagem do produto e cole aqui para ajudar a conseguir compradores.</small>
 				</div>
 				<div>
