--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -12,27 +12,27 @@
 			<div class="jumbotron mb-0">
 				<h1 class="display-4">Novo Pedido</h1>
 			</div>
-			<form action="/pedido/novo" method="post">
-				<div>
+			<form th:object="${pedidoDTO}" class="card-body" action="/pedido/novo" method="post">
+				<div class="form-group">
 					<label for="nomeProduto">Produto</label>
-					<input name="nomeProduto" placeholder="nome do produto"/>
+					<input th:field="*{nomeProduto}" class="form-control" placeholder="nome do produto"/>
 					<small>Informa qual o nome do produto.</small>
 				</div>
-				<div>
+				<div class="form-group">
 					<label for="urlProduto">Url</label>
-					<input name="urlProduto" placeholder="url do produto"/>
+					<input th:field="*{urlProduto}" class="form-control" placeholder="url do produto"/>
 					<small>Procure em um site o produto que você deseja e cole a url da página aqui.</small>
 				</div>
-				<div>
+				<div class="form-group">
 					<label for="urlImagem">Imagem</label>
-					<input name="urlImagem" placeholder="url da imagem"/>
+					<input th:field="*{urlImagem}" class="form-control" placeholder="url da imagem"/>
 					<small>Copie a url de uma boa imagem do produto e cole aqui para ajudar a conseguir compradores.</small>
 				</div>
-				<div>
+				<div class="form-group">
 					<label for="descricao">Descrição</label>
-					<textarea name="descricao" placeholder="Adicione detalhes importantes para ajudar o comprador"></textarea>
+					<textarea class="form-control" name="descricao" placeholder="Adicione detalhes importantes para ajudar o comprador"></textarea>
 				</div>
-				<button type="submit">Cadastrar</button>
+				<button class="btn btn-primary" type="submit">Cadastrar</button>
 			</form>
 		</div>
 	</body>
