--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,23 @@
 			rel="stylesheet"
 			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 			crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+		<style>
+			.logo-container {
+				background-color: #47bcff;
+				color: #FFF;
+			}
+			.logo {
+				font-family: 'Handlee', cursive;
+				font-size: 2.5rem;
+			}
+		</style>
 	</head>
 	<body>
+		<div class="logo-container mb-3 p-3 d-flex justify-content-between">
+			<span class="logo">mudi</span>
+			<span class="mt-3">login</span>
+		</div>
 		<div class="container">
 			<div class="jumbotron mb-0">
 				<h1 class="display-4">Meus Pedidos</h1>
@@ -25,7 +40,7 @@
 						class="btn btn-outline-secondary my-2 my-sm-0">Novo</button></a>
 			</nav>
 	
-			<div class="card" th:each="pedido : ${pedidos}">
+			<div class="card mb-3" th:each="pedido : ${pedidos}">
 				<div class="card-header" th:text="${pedido.nomeProduto}">Nome
 					do produto</div>
 				<div class="card-body">
