--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -1,17 +1,9 @@
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-			crossorigin="anonymous">
-	</head>
+	<head th:replace="~{base :: head}"></head>
 	<body>
+		<div th:replace="~{base :: logo}"></div>
 		<div class="container">
-			<div class="jumbotron mb-0">
-				<h1 class="display-4">Novo Pedido</h1>
-			</div>
+			<div th:replace="~{base :: titulo('Novo Pedido')}"></div>
 			<div class="card mt-3">
 				<form th:object="${pedidoDTO}" class="card-body" action="/pedido/novo" method="post">
 					<div class="form-group">
