--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -28,13 +28,23 @@
 	</style>
 </head>
 
-<div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
-	<span class="logo">mudi</span>
-	<span class="mt-3">
-		<a sec:authorize="!isAuthenticated()" class="text-light pagerLink" href="/login">login</a>
-		<a sec:authorize="isAuthenticated()" onClick="document.querySelector('#form-login').submit()" class="text-light pagerLink" href="#">logout</a>
-		<form id="form-login" th:action="@{/logout}" method="post"></form>
-	</span>
+<div th:fragment="logo" class="">
+	<div class="logo-container mb-3 p-3 d-flex justify-content-between">
+		<span class="logo ml-2">mudi</span>
+		<span class="mt-3">
+			<a sec:authorize="!isAuthenticated()" class="text-light pagerLink" href="/login">login</a>
+			<a sec:authorize="isAuthenticated()" onClick="document.querySelector('#form-login').submit()" class="text-light pagerLink" href="#">logout</a>
+			<form id="form-login" th:action="@{/logout}" method="post"></form>
+		</span>
+	</div>
+	<div class="row mb-2" sec:authorize="isAuthenticated()">
+		<div class="col	">
+			<nav class="nav">
+				<a class="nav-link" th:href="@{/home}">Home</a>
+				<a class="nav-link" th:href="@{/usuario/home}">Meus Pedidos</a>
+			</nav>
+		</div>
+	</div>
 </div>
 
 <div th:fragment="titulo(valor)" class="jumbotron mb-0">
