Page 'Ofertas' with vue.js

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -5,7 +5,7 @@
 		rel="stylesheet"
 		integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 		crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet"/>
 	<style>
 		.logo-container {
 			background-color: #47bcff;
@@ -42,6 +42,7 @@
 			<nav class="nav">
 				<a class="nav-link" th:href="@{/home}">Home</a>
 				<a class="nav-link" th:href="@{/usuario/home}">Meus Pedidos</a>
+				<a class="nav-link" th:href="@{/oferta}">Faça sua Oferta</a>
 			</nav>
 		</div>
 	</div>
