--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -1,43 +1,62 @@
 <html>
 	<head th:replace="~{base :: head}"></head>
-	<body>
+	<body onload="onLoad()">
 		<div th:replace="~{base :: logo}"></div>
 		
-		<div class="container">
-			<div class = "jumbotron	"th:replace="~{base :: titulo('Últimos pedidos')}"></div>			
+		<div class="container" id="ofertas">
+			<div class = "jumbotron	"th:replace="~{base :: titulo('Faça sua Oferta')}"></div>			
 			
-			<div class="card mb-3" th:each="pedido : ${pedidos}">
-					<div class="card-header alert-dark" th:text="${pedido.nomeProduto}">Nome do produto</div>
+			<div class="card mb-3" v-for="pedido in pedidos">
+					<div class="card-header alert-dark">{{ pedido.nomeProduto }}</div>
 				<div class="card-body">
 					<div class="row">
 						<div class="col-12 col-sm-8 mb-3">
 							<div class="row">
-								<div class="col-md-5">
-									Valor: <span th:if="${pedido.valorNegociado} != null" th:text="${'R$ ' + #numbers.formatDecimal(pedido.valorNegociado, 3, 'POINT', 2, 'COMMA')}">200,99</span>
-								</div>
-								<div class="col-md-7">
-									Data da entrega: <span th:text="${#temporals.format(pedido.dataDeEntrega, 'dd/MM/yyyy')}">10/02/2020</span>
-								</div>
+								<div class="col-md-5">Valor: <input /></div>
+								<div class="col-md-5">Data da entrega: <input /></div>
 							</div>
 							<div>Produto</div>
 							<div>
-								<input class="form-control" th:value="${pedido.urlProduto}"
-									value="url do produto" />
+								<a v-bind:href="pedido.urlProduto" >{{ pedido.nomeProduto }}</a>
 							</div>
 	
 							<div>Descrição</div>
 							<div>
-								<textarea class="form-control" th:text="${pedido.descricao}">descrição do pedido</textarea>
+								<textarea class="form-control">{{ pedido.descricao }}</textarea>
 							</div>
 						</div>
 						<div class="col-12 col-sm-4">
 							<div>
-								<img class="img-thumbnail" th:src="${pedido.urlImagem}" src="" />
+								<img class="img-thumbnail" v-bind:src="pedido.urlImagem"/>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<script>
+			
+			
+			function onLoad() {
+				var app = new Vue(
+						{
+							el : '#ofertas',
+							data : {
+								pedidos : [ {
+									"id" : 5,
+									"nomeProduto" : "Os 77 Melhores Contos De Grimm - Edição de Luxo com Livreto - Exclusivo",
+									"valorNegociado" : null,
+									"dataDeEntrega" : null,
+									"urlProduto" : "https://www.amazon.com.br/Os-Melhores-Contos-Grimm-Exclusivo/dp/6556400815/ref=gbph_tit_m-6_8169_3719b74c?smid=A1ZZFT5FULY4LN&pf_rd_p=55eb7961-a97c-425f-9ee8-86e68ebb8169&pf_rd_s=merchandised-search-6&pf_rd_t=101&pf_rd_i=6740748011&pf_rd_m=A1ZZFT5FULY4LN&pf_rd_r=7KQ60F9X1X2XP12HPB2Y",
+									"urlImagem" : "https://images-na.ssl-images-amazon.com/images/I/71aEaDedVLL.jpg",
+									"descricao" : "Os 77 Melhores Contos De Grimm - Edição de Luxo com Livreto - Exclusivo",
+									"statusPedido" : "AGUARDANDO"
+								} ]
+							}
+
+						})
+			}
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 	</body>
 </html>
