--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -42,21 +42,18 @@
 						{
 							el : '#ofertas',
 							data : {
-								pedidos : [ {
-									"id" : 5,
-									"nomeProduto" : "Os 77 Melhores Contos De Grimm - Edição de Luxo com Livreto - Exclusivo",
-									"valorNegociado" : null,
-									"dataDeEntrega" : null,
-									"urlProduto" : "https://www.amazon.com.br/Os-Melhores-Contos-Grimm-Exclusivo/dp/6556400815/ref=gbph_tit_m-6_8169_3719b74c?smid=A1ZZFT5FULY4LN&pf_rd_p=55eb7961-a97c-425f-9ee8-86e68ebb8169&pf_rd_s=merchandised-search-6&pf_rd_t=101&pf_rd_i=6740748011&pf_rd_m=A1ZZFT5FULY4LN&pf_rd_r=7KQ60F9X1X2XP12HPB2Y",
-									"urlImagem" : "https://images-na.ssl-images-amazon.com/images/I/71aEaDedVLL.jpg",
-									"descricao" : "Os 77 Melhores Contos De Grimm - Edição de Luxo com Livreto - Exclusivo",
-									"statusPedido" : "AGUARDANDO"
-								} ]
-							}
+								pedidos : [ ]
+							},
+							  mounted () {
+							    axios
+							      .get('http://localhost:8080/api/pedidos/aguardando')
+							      .then(response => (this.pedidos = response.data))
+							  }
 
 						})
 			}
 		</script>
 		<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	</body>
 </html>
