--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -11,10 +11,6 @@
 				<div class="card-body">
 					<div class="row">
 						<div class="col-12 col-sm-8 mb-3">
-							<div class="row">
-								<div class="col-md-5">Valor: <input /></div>
-								<div class="col-md-5">Data da entrega: <input /></div>
-							</div>
 							<div>Produto</div>
 							<div>
 								<a v-bind:href="pedido.urlProduto" >{{ pedido.nomeProduto }}</a>
@@ -22,9 +18,19 @@
 	
 							<div>Descrição</div>
 							<div>
-								<textarea class="form-control">{{ pedido.descricao }}</textarea>
+								<textarea disabled="disabled" class="form-control">{{ pedido.descricao }}</textarea>
 							</div>
+							<div class="row mt-3">
+								<div class="col-md-5">Valor: <input class="form-control" v-model="pedido.valor"/></div>
+								<div class="col-md-5">Data da entrega: <input class="form-control" v-model="pedido.dataDeEntrega"/></div>
+							</div>
+							<div class="mt-2">
+								<label>Comentário</label>
+								<textarea class="form-control" v-model="pedido.comentario"></textarea>
+							</div>
+							<button v-on:click="enviarOferta(pedido)" class="btn btn-primary mt-2">Enviar Oferta</button>
 						</div>
+						
 						<div class="col-12 col-sm-4">
 							<div>
 								<img class="img-thumbnail" v-bind:src="pedido.urlImagem"/>
@@ -48,8 +54,12 @@
 							    axios
 							      .get('http://localhost:8080/api/pedidos/aguardando')
 							      .then(response => (this.pedidos = response.data))
+							  },
+							  methods: {
+								  enviarOferta: function(pedido) {
+									  console.log(pedido);
+								  }
 							  }
-
 						})
 			}
 		</script>
