--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -21,8 +21,18 @@
 								<textarea disabled="disabled" class="form-control">{{ pedido.descricao }}</textarea>
 							</div>
 							<div class="row mt-3">
-								<div class="col-md-5">Valor: <input class="form-control" v-model="pedido.valor"/></div>
-								<div class="col-md-5">Data da entrega: <input class="form-control" v-model="pedido.dataDeEntrega"/></div>
+								<div class="col-md-5">
+									Valor: <input v-bind:class="{'is-invalid': pedido.erros.valor !== ''}" class="form-control" v-model="pedido.valor"/>
+									<div v-if="pedido.erros.valor" class="invalid-feedback">
+										{{pedido.erros.valor}}
+									</div>
+								</div>
+								<div class="col-md-5">Data da entrega: 
+									<input v-bind:class="{'is-invalid': pedido.erros.dataDeEntrega !== ''}" class="form-control" v-model="pedido.dataDeEntrega"/>
+									<div v-if="pedido.erros.dataDeEntrega" class="invalid-feedback">
+										{{pedido.erros.dataDeEntrega}}
+									</div>
+								</div>
 							</div>
 							<div class="mt-2">
 								<label>Comentário</label>
@@ -55,12 +65,23 @@
 							    axios
 							      .get('http://localhost:8080/api/pedidos/aguardando')
 							      .then(response => {
-							    	  response.data.forEach(pedido => pedido.ofertaEnviada = false)
+							    	  response.data.forEach(pedido => {
+							    		  pedido.ofertaEnviada = false;
+							    		  pedido.erros = {
+							    			valor: '',
+							    			dataDeEntrega: ''
+							    		  }
+					    		  		})
 							    	  this.pedidos = response.data
 							      });
 							  },
 							  methods: {
 								  enviarOferta: function(pedido) {
+									  pedido.erros = {
+								    			valor: '',
+								    			dataDeEntrega: ''
+								    		  }
+									  
 									  axios
 									  	.post('http://localhost:8080/api/ofertas', {
 								    	  idPedido: pedido.id,
@@ -68,7 +89,12 @@
 								    	  dataDeEntrega: pedido.dataDeEntrega,
 								    	  comentario: pedido.comentario
 								      })
-								      .then(response => pedido.ofertaEnviada = true);
+								      .then(response => pedido.ofertaEnviada = true)
+								      .catch(error => {
+						    	   		 error.response.data.errors.forEach(error=>{
+						    	   			 pedido.erros[error.field] = error.defaultMessage;
+						    	   		 })
+								      })
 								  }
 							  }
 						})
